Gh-3094: Allow services to use different cache implementations (#3147)
* Change CacheServiceLoader to support multiple caches and change Store and Properties classes to use these

* Modify Federated Store to work with new cache approach.
Includes removing redundant inheritance from FederatedStoreCache.

* Fix Federated Store tests.
Mostly changes to use FederatedStoreProperties instead of general properties and remove usage of empty properties

* Fix checking of deprecated property.
Also allow new property in deprecated method

* Remove use of old CacheServiceLoader initialise method from tests

* Remove use of deprecated CacheServiceLoader getService method from tests

* Replace use of deprecated CacheServiceLoader.isEnabled

* Remove direct use of Cache Service from FederatedGraphStorage
Also fix missing generics in Cache.java

* Replace use of deprecated CACHE_SERVICE_CLASS field

* Remove duplicate field identical to existing field and use static import instead

* Deprecated old CacheServiceLoader Test

* Rename old CacheServiceLoader Test

* Add new test for CacheServiceLoader
Change log4j test settings for cache module to show DEBUG messages

* Improve warning for when a subgraph tries to set cache class
The previous approach replaced the class but this wasn't required as re-initialising was already ignored. Now it warns with more details.

* Replace use of old default cache class property in all properties files

* Replace use of deprecated cache service class setter method

* Improve Javadoc for Federated Store Cache classes

* Remove duplicate cache class string fields in Federated Store tests

* Remove unreachable code relating to missing cache class in Federated Store
Improve handling to set the missing cache property instead of behaving as if it was

* Move all cache properties into CacheProperties.java

* Improve test coverage for new changes

* Add test to cover separate cache initialisation in Store

